made the class flow part to flip

--- a/index.html
+++ b/index.html
@@ -13,23 +13,66 @@
 
 <body>
     <div id="homepage">
-        <h1>	Learn the exisential "You" sentences <br>学会有字句</h1>
+        <h1>    Learn the exisential "You" sentences <br>学会有字句</h1>
         <p> Make <span>"There is/are "</span> sentences in the Chinese language accureately</p>
         <button>start now</button>
     </div>
-     <div id="lessonFlow">
-         
-<!--     <label for="">Learn</label>
- -->    <img src="./public/pics/1.jpg" alt="" id="factPic">
-<!--     <a href="http://www.freepik.com">Designed by Freepik</a>
+    <div id="lessonFlow">
+        <!--     <label for="">Learn</label>
+
  -->
-<!--     <label for="">Understand </label>
- -->    <img src="./public/pics/2.jpg" alt="" id="errorPic">
-     
-<!--     <label for="">Do</label>
- -->    <img src="./public/pics/3.jpg" alt="" id="doPic">
-<!--     <a href="http://www.freepik.com">Designed by Freepik</a>
+        <div class="container">
+        <h2>The Flow of the lesson</h2>
+            <div class="row">
+                <div class="flip-container
+ col-md-4" ontouchstart="this.classList.toggle('hover');">
+                    <div class="flipper">
+                        <div class="front">
+                            <img src="./public/pics/1.jpg" alt="" id="factPic">
+                            <!--     <a href="http://www.freepik.com">Designed by Freepik</a>
  -->
+                        </div>
+                        <div class="back">
+                            <p>You will learn the structure of the sentence by seeing examples and elaborations</p>
+                        </div>
+                    </div>
+                </div>
+                <!--     <label for="">Understand </label>
+ -->
+                <div class="flip-container col-md-4" ontouchstart="this.classList.toggle('hover');">
+                    <div class="flipper">
+                        <div class="front">
+                            <img src="./public/pics/2.jpg" alt="" id="errorPic">
+                        </div>
+                        <div class="back">
+                            <p>You will understand the structural differences between "there is/are" sentences and "You" sentences by analyzing common errors</p>
+                        </div>
+                    </div>
+                </div>
+                <!--     <label for="">Do</label>
+ -->
+                <div class="flip-container col-md-4" ontouchstart="this.classList.toggle('hover');">
+                    <div class="flipper">
+                        <div class="front">
+                            <img src="./public/pics/3.jpg" alt="" id="doPic">
+                        </div>
+                        <div class="back">
+                            <p>You will be able to make your own "You" sentences after seeing some example sentences.</p>
+                        </div>
+                    </div>
+                </div>
+                <!--     <a href="http://www.freepik.com">Designed by Freepik</a>
+ -->
+            </div>
+        </div>
+        <div class="row" id = "slogan">
+            <div class="col-md-4">Learn
+            </div>
+            <div class="col-md-4">Understand
+            </div>
+            <div class="col-md-4">Do
+            </div>
+        </div>
     </div>
     <div id="factsPage">
         <div id="facts">
@@ -54,8 +97,6 @@
             </div>
         </div>
     </div>
-
-
     <div id="errors">
         <h2>Here are the common errors</h2>
         <div>
