made the display example buttons work

--- a/index.html
+++ b/index.html
@@ -88,44 +88,13 @@
 
 
         <div id="examples">
-            <!-- 1桌子上有一本书，2冰箱里有牛奶， 3街上有很多车，4树上有只小松鼠，5学校附近有很多饭馆-->
-           <!--  <div class="container">
-            <div class="row">
         
-            <div class="col-md-4">
-                <img src="./public/pics/resturant_near_school.png" alt="">
-             </div>
-        
-            <div class="col-md-8">
-            <table id="factsTable" class="well">
-                <tr id="EnglishTranslation">
-                    <th>English:</th>
-                    <td colspan="4">There is a book on the table.</td>
-                </tr>
-                <tr>
-                    <th>Chinese:</th>
-                    <td class="structurePlace">桌子</td>
-                    <td class="structureProposition">上</td>
-                    <td class="structureYou">有</td>
-                    <td class="structureThings">一本书</td>
-                </tr>
-                <tr>
-                    <th>Order:</th>
-                    <td class="structurePlace">Place</td>
-                    <td class="structureProposition"> Preposition</td>
-                    <td class="structureYou"><i>You</i></td>
-                    <td class="structureThings">something</td>
-                </tr>
-            </table>
-            Former
-            <i class="fa fa-arrow-circle-left fa-lg"></i>
-            <i class="fa fa-arrow-circle-right fa-lg">Next</i>
-            </div>
-            </div>
-            </div>
 
-            <button class="btn-btn-primary"> Take Test</button> -->
         </div>
+                    <button class="btn-btn-primary" id="previous"> Previous </button> 
+
+                    <button class="btn-btn-primary" id="next"> Next </button> 
+
     </div>
     </div>
 
