finished the example section

--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="styles.css">
- 
 </head>
 
 <body>
     <div id="homepage">
         <h1>    Learn the exisential <i>"You"</i> sentences <br>学会有字句</h1>
         <p> Make <span>"There is/are "</span> sentences in the Chinese language accureately</p>
-        <button>start now</button>
+        <a href="#classFlow">
+            <button>start now</button>
+        </a>
     </div>
     <div id="lessonFlow">
         <!--     <label for="">Learn</label>
@@ -22,6 +23,7 @@
  -->
         <div class="container">
             <h2>The Flow of the lesson</h2>
+            <a name="classFlow"></a>
             <div class="row">
                 <div class="flip-container
  col-md-4" ontouchstart="this.classList.toggle('hover');">
@@ -74,7 +76,6 @@
         </div>
     </div>
     <div id="examplesPage">
-       
         <nav class="navbar navbar-default">
             <div class="container-fluid">
                 <div class="navbar-header">
@@ -82,26 +83,70 @@
                         <img alt="learn" src="./public/pics/1.jpg">
                     </a>
                 </div>
-                <h2>Learn the grammar</h2>
+                <h2>See the examples</h2>
             </div>
         </nav>
-
-
-        <div id="examples">
-        
-
+        <div class="lesson">
+            <div id="examples">
+            </div>
+            <div id="exampleButtons">
+                <button class="btn-btn-primary" id="previous"> Previous </button>
+                <button class="btn-btn-primary" id="next"> Next </button>
+            </div>
         </div>
-                    <button class="btn-btn-primary" id="previous"> Previous </button> 
+        <div class=assessment>
+            <h3 class="hidden"> Ready? Click <span><u>here</u></span> to make one "You" sentence!</h3>
+            <div class="container-fluid">
+                <div class="hidden" id="sortStructure">
+                    <h4 id="catInstruction">According to the following picture, sort the scrambled words by dragging. The vocabulry list is provided to assist you </h4>
+                    <div class="row">
+                        <div class="col-md-4">
+                            <div class="row"><p calss="specificCatInstruction">picture</p></div>
+                            <div class="row">
+                                <img src="./public/pics/cat_on_the_chair.png" alt="" id="catAssessmentPic">
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="row">
+                                <p calss="specificCatInstruction"> Unscramble the words</p>
+                            </div>
 
-                    <button class="btn-btn-primary" id="next"> Next </button> 
+                                <div class="row" id="sortStructurePad">
+                                 <div id="sortStructure">
+                                    <ol>
+                                        <li>有</li>
+                                        <li>一只猫</li>
+                                        <li>上</li>
+                                        <li>椅子</li>
+                                    </ol>
+                                   <button>Check</button>
 
+                                </div>
+                                </div>
+
+                        </div>
+                        <div class="col-md-4">
+                            <div class="row">
+                                <p calss="specificCatInstruction">vocabulary List</p>
+                            </div>
+                            <div class="row" id="Catvocabulary">
+                                <ul>
+                                    <li>一只猫 a cat</li>
+                                    <li>椅子 chair</li>
+                                    <li>上 on </li>
+                                    <li>有 you</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     </div>
-
-
-
-
     <div id="errors">
+                      <a name="explanation"></a>
+
         <nav class="navbar navbar-default">
             <div class="container-fluid">
                 <div class="navbar-header">
@@ -109,18 +154,23 @@
                         <img alt="learn" src="./public/pics/2.jpg">
                     </a>
                 </div>
-                <h2>Understand the Grammar</h2>
+                <h2>Learn the grammar</h2>
             </div>
         </nav>
-        <div>
-            桌子在书。
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <h2>Form</h2> The order of the in the Chinese "You" sentences are different from that in English. The prepostion always appears after the place. The place is the first element of the sentence.
+                </div>
+                <div class="col-md-4">
+                    <h2>Meaning</h2> The meaning of Chinese "You" sentences is the same as the "There is/are" sentences in English: it refers to the existence or presence of someone/something in realtion to a place The keyword "有" is used to denote existence. It is different from the possesive "有" in sentences like "我有一本书" (I have a book).
+                </div>
+                <h2>Use</h2>
+                <div class="col-md-4">
+                    You will use "有" sentences rather than "在" sentences when you are not familar with the thing you are talking about. For example, if you are talking about your phone with your friends. And you want to say "My phone is on the table." You should use "在"。 But if you are talking about something else, and noticed a phone on the table, you shall use "有"。
+                </div>
+            </div>
         </div>
-        <div>
-            桌子有书。
-        </div>
-        <p>Correct the sentences and explain why are the sentences wrong</p>
-        <div id="make sentences"></div>
-        picture sentences picture sentences picture sentences
     </div>
     <div id="do">
         <nav class="navbar navbar-default">
@@ -133,13 +183,16 @@
                 <h2>Make the sentences</h2>
             </div>
         </nav>
-        <p> Make the sentences</p>
-        密室逃脱，你要描述线索
+        <h4> Imagine you are describing a room in your dream to a friend. Here is the room.  </h4>
+<div class="container">
+<div class="form-group">
+  <textarea class="form-control" rows="18" id="comment" placeholder="Start here!"></textarea>
+  <button class='btn=btn-info'>Finish</button>
+</div>
+</div>
+
     </div>
-
-
-
-       <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
     <script src="app.js"></script>
 </body>
