--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
     </div>
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
-    <script src="app.js"></script>
+    <script src="main.js"></script>
 </body>
 
 </html>
